# datashare-network-client

./: .gitignore  Makefile  Pipfile  README.md  alembic.ini  pyproject.toml  reset_db.sh  setup.py
.circleci/: config.yml
dsnetclient/: api.py  async_cmd.py  form_parser.py  index.py  main.py  message_retriever.py  message_sender.py  models.py  mutually_exclusive_click.py  query_encoder.py  repository.py  tokenizer.py
migrations/: env.py
migrations/versions/: 19e4f11af444_init.py  229d852deeec_init.py  2f964fbd9031_init.py  3704c5964cf2_init.py  3bef5c2c4511_init.py  583d3cfa0c78_.py  61e54046076c_init.py  64dbc0991bae_add_peer_table.py  916956fcbf4d_init.py  a39398846687_init.py  b83cb836e467_init.py  b932dcdce17e_init.py  ce422e18d691_init.py  ffd5c9fbfa45_init.py
test/: conftest.py  server.py  server_oauth2.py  test_api.py  test_api_auth.py  test_api_integration.py  test_index.py  test_lucene.py  test_main.py  test_message_retriever.py  test_message_sender.py  test_repository.py  test_server.py  test_server_oauth2.py  test_tokenizer.py  test_utils.py
test/data/: search_examples.json
